--- a/_posts/ibar 2018.markdown
+++ b/_posts/ibar 2018.markdown
@@ -2,7 +2,7 @@
 layout: default
 modal-id: 1
 date: 2018-03-19
-img: ../img/ibar.jpeg
+img: ibar.JPG
 alt: image-alt
 project-date: April 2014
 client: Start Bootstrap
